--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>About GQ Disc Golf</title>
+    <title>About Gabe Quakkelaar</title>
 
     <!-- Adding a background image -->
     <style>
@@ -26,7 +26,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">GQ Disc Golf</a>
+            <a class="navbar-brand" href="#">Gabe Quakkelaar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -61,7 +61,7 @@
             <!-- Card with About info on GQ Disc Golf -->
             <div class="card col-xs-12 col-md-8">
                 <div class="card-body">
-                    <h4 class="card-title">Who is GQ Disc Golf?</h4>
+                    <h4 class="card-title">Who is Gabe Quakkelaar?</h4>
                     <img src="./assets/images/GQDiscGolf_Forehand.jpg" class="card-img-top aboutImage"
                         alt="GQ Disc Golf Forehand">
                     <h5>Our Founder</h5>
@@ -108,22 +108,18 @@
         <p><br></p>
         <p><a href="https://www.facebook.com/GQDiscGolf" target="_blank">
                 <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/online_social_media_facebook-256.png"
-                    alt="GQ Disc Golf on Facebook" width="50" height="50"></a>
+                    alt="Gabe Quakkelaar on Facebook" width="50" height="50"></a>
 
             <a href="https://twitter.com/GQDiscGolf" target="_blank">
                 <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/twitter_online_social_media-256.png"
-                    alt="GQ Disc Golf on Twitter" width="50" height="50"></a>
+                    alt="Gabe Quakkelaar on Twitter" width="50" height="50"></a>
 
             <a href="https://www.instagram.com/gqdiscgolf/" target="_blank">
                 <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/instagram_online_social_media_photo-256.png"
-                    alt="GQ Disc Golf on Instagram" width="50" height="50"></a>
-
-            <a href="https://www.youtube.com/channel/UCqkadxtsQjzeYUiJxo17Gew" target="_blank">
-                <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/youtube_online_social_media_tube-256.png"
-                    alt="GQ Disc Golf on YouTube" width="50" height="50"></a>
+                    alt="Gabe Quakkelaar on Instagram" width="50" height="50"></a>
         </p>
         <div>
-            <span class="text-muted">&copy; Copyright 2021 GQ Disc Golf</span>
+            <span class="text-muted">&copy; Copyright 2021 Gabe Quakkelaar</span>
         </div>
     </footer>
 
