swapping dg images for code projects & links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Gabe Quakkelaar</a>
+            <a class="navbar-brand">Gabe Quakkelaar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -65,7 +65,7 @@
             <div class="col-xs-12 col-md-10 hideLarge-screen">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Who is GQ Disc Golf?</h4>
+                        <h4 class="card-title">Who is Gabe Quakkelaar?</h4>
                         <img src="./assets/images/GQDiscGolf_Forehand.jpg" class="card-img-top homePageImage"
                             alt="GQ Disc Golf Forehand">
                         <h5>Our Founder</h5>
@@ -148,7 +148,7 @@
             <div class="large-screen col-lg-6">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Who is GQ Disc Golf?</h4>
+                        <h4 class="card-title">Who is Gabe Quakkelaar?</h4>
                         <img src="./assets/images/GQDiscGolf_Forehand.jpg" class="card-img-top homePageImage"
                             alt="GQ Disc Golf Forehand">
                         <h5>Our Founder</h5>
@@ -174,7 +174,6 @@
                             accessible
                             for other fans.</p>
 
-                        <img src="./assets/images/GQDGLogo.png" class="card-img-top logoImage" alt="GQ Disc Golf Logo">
 
                         <h5>History</h5>
                         <p class="history">GQ Disc Golf was founded in December 2019 when Gabe Quakkelaar created an
@@ -229,42 +228,41 @@
             <!-- Portfolio content on lg screens -->
             <div class="large-screen col-lg-3">
                 <div class="card">
-                    <img src="./assets/images/putters.jpg" class="card-img-top homepageIcon" alt="Putters">
+
                     <div class="card-body">
-                        <h5 class="card-title">Putters</h5>
+                        <a href="https://justinwestmoreland.github.io/Who-Said-It/" target="blank">
+                            <h5 class="card-title">Who Said It?</h5>
+                        </a>
                     </div>
+
+                    <a href="https://justinwestmoreland.github.io/Who-Said-It/" target="blank"><img
+                            src="./assets/images/WhoSaidIt.gif" class="card-img-top" alt="Who Said It?"></a>
+                    <p><br></p>
                 </div>
                 <p><br></p>
 
                 <div class="card">
-                    <img src="./assets/images/midranges.jpg" class="card-img-top homepageIcon" alt="Midranges">
                     <div class="card-body">
-                        <h5 class="card-title">Midranges</h5>
+                        <a href="https://gquak.github.io/06_WeatherDashboard/" target="blank">
+                            <h5 class="card-title">Weather Dashboard</h5>
+                        </a>
                     </div>
+                    <a href="https://gquak.github.io/06_WeatherDashboard/" target="blank"><img
+                            src="./assets/images/06_WeatherDashboard.gif" class="card-img-top"
+                            alt="Weather Dashboard"></a>
+                    <p><br></p>
                 </div>
                 <p><br></p>
 
                 <div class="card">
-                    <img src="./assets/images/fairways.jpg" class="card-img-top homepageIcon" alt="Fairway Drivers">
                     <div class="card-body">
-                        <h5 class="card-title">Fairway Drivers</h5>
+                        <a href="https://gquak.github.io/05_WorkCalendar/" target="blank">
+                            <h5 class="card-title">Work Calendar</h5>
+                        </a>
                     </div>
-                </div>
-                <p><br></p>
-
-                <div class="card">
-                    <img src="./assets/images/drivers.jpg" class="card-img-top homepageIcon" alt="Distance Drivers">
-                    <div class="card-body">
-                        <h5 class="card-title">Distance Drivers</h5>
-                    </div>
-                </div>
-                <p><br></p>
-
-                <div class="card">
-                    <img src="./assets/images/bag.jpg" class="card-img-top homepageIcon" alt="Disc Golf Backpack">
-                    <div class="card-body">
-                        <h5 class="card-title">Accessories</h5>
-                    </div>
+                    <a href="https://gquak.github.io/05_WorkCalendar/" target="blank"><img
+                            src="./assets/images/05_WorkCalendar.gif" class="card-img-top" alt="Work Calendar"></a>
+                    <p><br></p>
                 </div>
             </div>
 
@@ -278,25 +276,20 @@
     <!-- Footer with social links & copywrite -->
     <footer class="footer footerStyle">
         <p><br></p>
-        <p><a href="https://www.facebook.com/GQDiscGolf" target="_blank">
-                <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/online_social_media_facebook-256.png"
-                    alt="Gabe Quakkelaar on Facebook" width="50" height="50"></a>
+        <a href="https://www.linkedin.com/in/gabriel-quakkelaar/" target="_blank">
+            <img src="https://cdn3.iconfinder.com/data/icons/2018-social-media-black-and-white-logos/1000/2018_social_media_popular_app_logo_linkedin-512.png"
+                alt="Gabe Quakkelaar on LinkedIn" width="50" height="50"></a>
 
-            <a href="https://twitter.com/GQDiscGolf" target="_blank">
-                <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/twitter_online_social_media-256.png"
-                    alt="Gabe Quakkelaar on Twitter" width="50" height="50"></a>
-
-            <a href="https://www.instagram.com/gqdiscgolf/" target="_blank">
-                <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/instagram_online_social_media_photo-256.png"
-                    alt="Gabe Quakkelaar on Instagram" width="50" height="50"></a>
+        <a href="https://github.com/GQuak" target="_blank">
+            <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/64/social_media_logo_github-512.png"
+                alt="Gabe Quakkelaar on Github" width="50" height="50"></a>
         </p>
         <div>
             <span class="text-muted">&copy; Copyright 2021 Gabe Quakkelaar</span>
+            </br>
+            </br>
         </div>
     </footer>
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
