--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Gabe Quakkelaar</a>
+            <a class="navbar-brand">Gabe Quakkelaar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -106,20 +106,18 @@
     <!-- Footer with social links & copywrite -->
     <footer class="footer footerStyle">
         <p><br></p>
-        <p><a href="https://www.facebook.com/GQDiscGolf" target="_blank">
-                <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/online_social_media_facebook-256.png"
-                    alt="Gabe Quakkelaar on Facebook" width="50" height="50"></a>
+        <a href="https://www.linkedin.com/in/gabriel-quakkelaar/" target="_blank">
+            <img src="https://cdn3.iconfinder.com/data/icons/2018-social-media-black-and-white-logos/1000/2018_social_media_popular_app_logo_linkedin-512.png"
+                alt="Gabe Quakkelaar on LinkedIn" width="50" height="50"></a>
 
-            <a href="https://twitter.com/GQDiscGolf" target="_blank">
-                <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/twitter_online_social_media-256.png"
-                    alt="Gabe Quakkelaar on Twitter" width="50" height="50"></a>
-
-            <a href="https://www.instagram.com/gqdiscgolf/" target="_blank">
-                <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/instagram_online_social_media_photo-256.png"
-                    alt="Gabe Quakkelaar on Instagram" width="50" height="50"></a>
+        <a href="https://github.com/GQuak" target="_blank">
+            <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/64/social_media_logo_github-512.png"
+                alt="Gabe Quakkelaar on Github" width="50" height="50"></a>
         </p>
         <div>
             <span class="text-muted">&copy; Copyright 2021 Gabe Quakkelaar</span>
+            </br>
+            </br>
         </div>
     </footer>
 
