adding personal image

--- a/about.html
+++ b/about.html
@@ -62,8 +62,7 @@
             <div class="card col-xs-12 col-md-8">
                 <div class="card-body">
                     <h4 class="card-title">Who is Gabe Quakkelaar?</h4>
-                    <img src="./assets/images/GQDiscGolf_Forehand.jpg" class="card-img-top aboutImage"
-                        alt="GQ Disc Golf Forehand">
+                    <img src="./assets/images/QFam.jpg" class="card-img-top aboutImage" alt="Gabe Quakkelaar's Family">
                     <h5>Our Founder</h5>
                     <p class="founder">Gabe Quakkelaar started playing disc golf in 2017 when his college roommate took
                         him out between Ultimate frisbee practices and games. After graduating from college in the
@@ -77,8 +76,6 @@
                         Denver, Colorado with his wife and Australian Shepherd taking the University of Denver coding
                         bootcamp so he can improve this website and make the data analysis even more easily accessible
                         for other fans.</p>
-
-                    <img src="./assets/images/GQDGLogo.png" class="card-img-top logoImage" alt="GQ Disc Golf Logo">
 
                     <h5>History</h5>
                     <p class="history">GQ Disc Golf was founded in December 2019 when Gabe Quakkelaar created an
