--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Who is Gabe Quakkelaar?</h4>
-                        <img src="./assets/images/GQDiscGolf_Forehand.jpg" class="card-img-top homePageImage"
-                            alt="GQ Disc Golf Forehand">
+                        <img src="./assets/images/QFam.jpg" class="card-img-top homePageImage"
+                            alt="Gabe Quakkelaar's Family">
                         <h5>Our Founder</h5>
                         <p class="founder">Gabe Quakkelaar started playing disc golf in 2017 when his college roommate
                             took
@@ -149,8 +149,8 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Who is Gabe Quakkelaar?</h4>
-                        <img src="./assets/images/GQDiscGolf_Forehand.jpg" class="card-img-top homePageImage"
-                            alt="GQ Disc Golf Forehand">
+                        <img src="./assets/images/QFam.jpg" class="card-img-top homePageImage"
+                            alt="Gabe Quakkelaar's Family">
                         <h5>Our Founder</h5>
                         <p class="founder">Gabe Quakkelaar started playing disc golf in 2017 when his college roommate
                             took
