adding resume link and pdf sample

--- a/about.html
+++ b/about.html
@@ -48,6 +48,7 @@
                             title="Go to GQ Disc Golf's Portfolio">Portfolio</a>
                     </li>
                 </ul>
+                <a href="./assets/uploads/Resume Template.pdf" target="blank" class="navbar-brand">Resume</a>
             </div>
         </div>
     </nav>
