updated resume, fleshed out about page

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                             title="Go to Gabe Quakkelaar's Portfolio">Portfolio</a>
                     </li>
                 </ul>
-                <a href="./assets/uploads/Resume Template.pdf" target="blank" class="navbar-brand">Resume</a>
+                <a href="./assets/uploads/Gabe Quakkelaar Resume.pdf" target="blank" class="navbar-brand">Resume</a>
             </div>
         </div>
     </nav>
