--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                             title="Go to GQ Disc Golf's Portfolio">Portfolio</a>
                     </li>
                 </ul>
-                <a href="./assets/uploads/Resume Template.pdf" target="blank" class="navbar-brand">Resume</a>
+                <a href="./assets/uploads/Gabe Quakkelaar Resume.pdf" target="blank" class="navbar-brand">Resume</a>
             </div>
         </div>
     </nav>
@@ -62,36 +62,106 @@
             <!-- Card with About info on GQ Disc Golf -->
             <div class="card col-xs-12 col-md-8">
                 <div class="card-body">
-                    <h4 class="card-title">Who is Gabe Quakkelaar?</h4>
+                    <h3 class="card-title">Who is Gabe Quakkelaar?</h3>
                     <img src="./assets/images/QFam.jpg" class="card-img-top aboutImage" alt="Gabe Quakkelaar's Family">
-                    <h5>Our Founder</h5>
-                    <p class="founder">Gabe Quakkelaar started playing disc golf in 2017 when his college roommate took
-                        him out between Ultimate frisbee practices and games. After graduating from college in the
-                        spring of 2018 with a double major in Business Management and Computer Information systems he
-                        continued to play casually as a way to get outside and to keep in touch with college friends.
-                        Eventually he started to take the sport more seriously and played a few tournaments and started
-                        watching professional footage on YouTube, which inspired him to work on his game and to connect
-                        with the Disc Golf community. Once he created an Instagram account, he quickly realized that he
-                        had a unique blend of talent and experience that would allow him to create a successful Disc
-                        Golf brand that provides unique data analysis on the professional scene. Now he’s living outside
-                        Denver, Colorado with his wife and Australian Shepherd taking the University of Denver coding
-                        bootcamp so he can improve this website and make the data analysis even more easily accessible
-                        for other fans.</p>
+                    <p class="about"><br><br>I am a
+                        young
+                        business professional looking for a software development role where I can take ownership by
+                        embracing the role’s responsibilities while leveraging my skills and experiences to find
+                        innovate solutions, drive results-oriented outcomes, and exceed client’s expectations. <br><br>
+                        I live in Brighton Colorado with my wife and Australian Shepherd. We love to explore the
+                        mountains on trail hikes only stopping for photos and dog treats.
+                    </p>
 
-                    <h5>History</h5>
-                    <p class="history">GQ Disc Golf was founded in December 2019 when Gabe Quakkelaar created an
-                        Instagram account to share his Disc Golf adventure. Since then, the brand has grown to over 1.3k
-                        Instagram followers, over 500 likes on Facebook, and 130+ followers on Twitter. In 2021 the
-                        brand
-                        is growing by actively promoting the YouTube channel by posting content more regularly and
-                        promoting it across all of their social platforms. Another big step is the creation of a website
-                        where unique statistical analysis can be shared in an informative and interactive way.</p>
+                    <div class="experience">
+                        <h4>Education</h4>
 
-                    <h5>Mission</h5>
-                    <p class="mission">“To promote Disc Golf by creating a positive environment on social media, helping
-                        new players learn more about the game and the professional level, and provide unique statistical
-                        insights.”</p>
+                        <h5>Full Stack Development</h5>
+                        <p class="subtext">UNIVERSITY OF DENVER</p>
+                        <div class="background">
+                            <p class="cityDate">2020 - Projected 2021 <br> Denver, CO</p>
 
+                            <p class="UofD">I am currently studying in the University of Denver coding bootcamp. My
+                                objective for the bootcamp was to refresh my knowledge of software development languages
+                                and best practices as well as expanding my knowledge to include additional software
+                                languages.</p>
+                        </div>
+                        <p class="spacer"><br><br></p>
+
+
+                        <h5>B.S. Computer Information Systems</h5>
+                        <p class="subtext">CORNERSTONE UNIVERSITY</p>
+                        <div class="background">
+                            <p class="cityDate">2014 - 2018 <br> Grand Rapids, MI</p>
+
+                            <p class="CU">I graduated in 2018 with a double major in Business Management and Computer
+                                Information Systems with a Finance minor. I learned UI/UX design focused on web
+                                development using HTML and CSS. I also learned database structure and design based in
+                                C++ and SQL.</p>
+                        </div>
+                    </div>
+                    <p><br></p>
+
+                    <div class="experience">
+                        <h4>Work History</h4>
+                        <h5>PPC Specialist</h5>
+                        <p class="subtext">DAXKO</p>
+                        <div class="background">
+                            <p class="cityDate">2020 - Present<br> Denver, CO</p>
+                            <ul>
+                                <li>Designs custom landing pages for digital marketing campaigns, optimized for lead
+                                    capture.</li>
+                                <li>Managing multiple clients and projects simultaneously, delivering custom marketing
+                                    campaigns within the established timeframe.</li>
+                                <li>Developing reporting tools utilizing data pulled from Facebook’s ad management
+                                    platform to provide insights driven by analytics.</li>
+                            </ul>
+                        </div>
+                        <p class="spacer"><br><br></p>
+
+                        <h5>Analyst, Customer Service</h5>
+                        <p class="subtext">THE KELLOGG COMPANY</p>
+                        <div class="background">
+                            <p class="cityDate">2019 - 2020 <br> Grand Rapids, MI</p>
+                            <ul>
+                                <li>Created seamless and satisfying internal and external customer experience.</li>
+                                <li>Proactively monitored all outbound orders from receipt of PO to successful delivery
+                                    of the products.</li>
+                                <li>Resolved problems quickly and accurately to ensure customers receive the highest
+                                    level of service.</li>
+                            </ul>
+                        </div>
+                        <p class="spacer"><br><br></p>
+
+                        <h5>Digital Specialist</h5>
+                        <p class="subtext">ADTEGRITY</p>
+                        <div class="background">
+                            <p class="cityDate">2018 - 2019 <br> Grand Rapids, MI</p>
+                            <ul>
+                                <li>Led the onboarding & training process of an international service partner to
+                                    increase the efficiency and workload capabilities of the team.</li>
+                                <li>Created and managed digital marketing campaigns on a variety of platforms that
+                                    included Google Search & Display, Facebook, Twitter, Linkedin, Snapchat, Spotify,
+                                    and Pandora.</li>
+                                <li>Worked with companies that included Bissell, Spartan Nash, Auto-Owners Insurance,
+                                    and Notre Dame University. </li>
+                            </ul>
+                        </div>
+                        <p class="spacer"><br><br></p>
+
+                        <h5>Project Manager - Mobile App</h5>
+                        <p class="subtext">THE ACTON INSTITUTE</p>
+                        <div class="background">
+                            <p class="cityDate">2016 - 2018 <br> Grand Rapids, MI</p>
+                            <ul>
+                                <li>Managed the development of the 2017 & 2018 Acton University App’s by creating the
+                                    design to match the existing branding guide, compiled thousands of pages of
+                                    resources into a single location, created a social network platform for participants
+                                    to connect.</li>
+                                <li>The app was downloaded and used by over 1,000 attendees from over 80 countries.</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
 
