finalizing readme file

--- a/index.html
+++ b/index.html
@@ -329,32 +329,6 @@
                         </div>
                     </div>
                 </div>
-                <p><br></p>
-                <div class="card">
-                    <div class="card-body formStyle">
-                        <form>
-                            <h2>Contact</h2>
-                            <label for="fname">First name:</label><br>
-                            <input type="text" id="fname" name="fname"><br>
-                            <label for="lname">Last name:</label><br>
-                            <input type="text" id="lname" name="lname"><br>
-
-                            <label for="email">Email:</label><br>
-                            <input type="email" id="email" name="email"><br>
-
-                            <label for="phone">Phone:</label><br>
-                            <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><br>
-
-                            <label for="message">Message:</label><br>
-                            <input type="text" id="message" name="message"><br>
-                            <br>
-                            <input type="submit" value="Submit">
-
-                        </form>
-                        <p><br><br></p>
-                    </div>
-                </div>
-
             </div>
 
             <!-- Buffer for lg screens -->
@@ -399,6 +373,31 @@
                             src="./assets/images/05_WorkCalendar.gif" class="card-img-top" alt="Work Calendar"></a>
                     <p><br></p>
                 </div>
+                <p><br></p>
+                <div class="card">
+                    <div class="card-body formStyle">
+                        <form>
+                            <h2>Contact</h2>
+                            <label for="fname">First name:</label><br>
+                            <input type="text" id="fname" name="fname"><br>
+                            <label for="lname">Last name:</label><br>
+                            <input type="text" id="lname" name="lname"><br>
+
+                            <label for="email">Email:</label><br>
+                            <input type="email" id="email" name="email"><br>
+
+                            <label for="phone">Phone:</label><br>
+                            <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><br>
+
+                            <label for="message">Message:</label><br>
+                            <input type="text" id="message" name="message"><br>
+                            <br>
+                            <input type="submit" value="Submit">
+
+                        </form>
+                        <p><br><br></p>
+                    </div>
+                </div>
             </div>
 
             <!-- Buffer for lg screens -->
@@ -420,7 +419,8 @@
                 alt="Gabe Quakkelaar on Github" width="50" height="50"></a>
         </p>
         <div>
-            <span class="text-muted">&copy; Copyright 2021 Gabe Quakkelaar</span>
+            <span class="text-muted"> Gabe Quakkelaar | (616) 420-1427 | gabe.quakkelaar@gmail.com <br>&copy; Copyright
+                2021 Gabe Quakkelaar</span>
             </br>
             </br>
         </div>
