--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,8 @@
                 alt="Gabe Quakkelaar on Github" width="50" height="50"></a>
         </p>
         <div>
-            <span class="text-muted">&copy; Copyright 2021 Gabe Quakkelaar</span>
+            <span class="text-muted"> Gabe Quakkelaar | (616) 420-1427 | gabe.quakkelaar@gmail.com <br>&copy; Copyright
+                2021 Gabe Quakkelaar</span>
             </br>
             </br>
         </div>
